# jlpe

./: .gitignore  Dockerfile  README.md  pyproject.toml
.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
.jupyter/lab/user-settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
