[tool.poetry]
name = "jlpe"
version = "3.13.12+slim-trixie.20260501"
description = "Portable JupyterLab environment that simplifies setup and ensures consistency across different platforms."
authors = ["Seeeaaa"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.ml.dependencies]
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
catboost = "^1.2.10"
prophet = "^1.3.0"
optuna = "^4.8.0"
# shap = "^0.51.0"
scikit-learn = "^1.8.0"
statsmodels = "^0.14.6"
tsfresh = { extras = ["dask"], version = "^0.21.1" }
# mlflow = "^3.11.1"

[tool.poetry.group.data.dependencies]
pandas = { extras = ["performance"], version = "^3.0.2" }
numpy = "^2.4.4"
scipy = "^1.17.1"
polars = "^1.40.1"
dask = { extras = ["complete"], version = "^2026.3.0" }
duckdb = "^1.5.2"
pyarrow = "^24.0.9"
SQLAlchemy = "^2.0.49"
psycopg = { version = "^3.3.3", extras = ["binary", "pool"] }

[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
plotly = "^6.7.0"
colorcet = "^3.1.0"
bokeh = "^3.9.0"
geopandas = "^1.1.3"
kaleido = "^1.2.0"

[tool.poetry.group.jupyterlab.dependencies]
jupyterlab = "^4.5.7"
jupyterlab-code-formatter = "^3.0.3"
jupyterlab-execute-time = "^3.3.0"
jupyter-resource-usage = "^1.2.1"
ipywidgets = "^8.1.8"
nb-clean = "^4.0.1"

[tool.poetry.group.format.dependencies]
autopep8 = "^2.3.2"
black = "^26.3.1"
isort = "^8.0.1"
ruff = "^0.15.11"
yapf = "^0.43.0"

[tool.poetry.group.theme.dependencies]
catppuccin-jupyterlab = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
