[tool.poetry]
name = "jlpe"
version = "3.13.13+slim-trixie.20260618"
description = "Portable JupyterLab environment that simplifies setup and ensures consistency across different platforms."
authors = ["Seeeaaa"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<=3.14"

[tool.poetry.group.ml.dependencies]
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
catboost = "^1.2.10"
prophet = "^1.3.0"
optuna = "^4.9.0"
# shap = "^0.52.0"
scikit-learn = "^1.9.0"
statsmodels = "^0.14.6"
tsfresh = { extras = ["dask"], version = "^0.21.2" }
# mlflow = "^3.13.0"

[tool.poetry.group.data.dependencies]
pandas = { extras = ["performance"], version = "^3.0.3" }
numpy = "^2.4.6"
scipy = "^1.17.1"
polars = "^1.41.2"
dask = { extras = ["complete"], version = "^2026.6.0" }
duckdb = "^1.5.4"
pyarrow = "^24.0.0"
SQLAlchemy = "^2.0.50"
psycopg = { version = "^3.3.4", extras = ["binary", "pool"] }

[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.11.0"
seaborn = "^0.13.2"
plotly = "^6.8.0"
colorcet = "^3.2.1"
bokeh = "^3.9.1"
geopandas = "^1.1.3"
kaleido = "^1.3.0"

[tool.poetry.group.jupyterlab.dependencies]
jupyterlab = "^4.5.8"
jupyterlab-execute-time = "^3.3.0"
jupyter-resource-usage = "^1.2.1"
ipywidgets = "^8.1.8"
nb-clean = "^4.0.1"
jupyter-ruff = "^0.3.1"

[tool.poetry.group.theme.dependencies]
catppuccin-jupyterlab = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
