[project]
name = "jlpe"
version = "3.13.14+slim-trixie.20260623"
description = "Portable JupyterLab environment that simplifies setup and ensures consistency across different platforms."
authors = [{ name = "Seeeaaa" }]
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
package = false

[dependency-groups]
ml = [
    "xgboost>=3.3.0,<4",
    "lightgbm>=4.6.0,<5",
    "catboost>=1.2.10,<2",
    "prophet>=1.3.0,<2",
    "optuna>=4.9.0,<5",
    # "shap>=0.52.0,<0.53",
    "scikit-learn>=1.9.0,<2",
    "statsmodels>=0.14.6,<0.15",
    "tsfresh[dask]>=0.21.2,<0.22",
    # "mlflow>=3.13.0,<4",
]

data = [
    "pandas[performance]>=3.0.3,<4",
    "numpy>=2.4.6,<3",
    "scipy>=1.18.0,<2",
    "polars>=1.41.2,<2",
    "dask[complete]>=2026.6.0,<2027",
    "duckdb>=1.5.4,<2",
    "pyarrow>=24.0.0,<25",
    "SQLAlchemy>=2.0.51,<3",
    "psycopg[binary,pool]>=3.3.4,<4",
]

visualization = [
    "matplotlib>=3.11.0,<4",
    "seaborn>=0.13.2,<0.14",
    "plotly>=6.8.0,<7",
    "colorcet>=3.2.1,<4",
    "bokeh>=3.9.1,<4",
    "geopandas>=1.1.3,<2",
    "kaleido>=1.3.0,<2",
]

jupyterlab = [
    "jupyterlab>=4.6.0,<5",
    "jupyterlab-execute-time>=3.3.0,<4",
    "jupyter-resource-usage>=1.2.1,<2",
    "ipywidgets>=8.1.8,<9",
    "nb-clean>=4.0.1,<5",
    "jupyter-ruff>=0.3.1,<0.4",
]

theme = [
    "catppuccin-jupyterlab>=0.2.5,<0.3",
]